Calendar popover: Fix it being cutoff by parent element + make placement 'auto top-left' of event

--- a/client/app/assets/css/redash.css
+++ b/client/app/assets/css/redash.css
@@ -359,7 +359,7 @@ counter-renderer counter-name {
   display: block;
 }
 
-calendar-renderer .popover-content ul {
+.popover-content ul {
   list-style-type: none;
   padding-left: 0;
 }
